# python-aztec

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONFORMANCE.md  CONTRIBUTING.md  CONTRIBUTORS.md  MANIFEST.in  PRODUCTION_CHECKLIST.md  README.md  SECURITY.md  aztec_code_generator.py  pyproject.toml  requirements-test.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release-gate.yml
aztec_py/: __init__.py  __main__.py  batch.py  bcbp.py  compat.py  core.py  decode.py  error_correction.py  gs1.py  matrix.py  presets.py  rune.py
aztec_py/renderers/: __init__.py  image.py  svg.py
docs/: ISO_IEC_24778_TRACEABILITY.md
scripts/: conformance_report.py  decoder_matrix.py  sync_labels.sh
tests/: conftest.py  test_api_behaviour.py  test_batch.py  test_bcbp.py  test_cli.py  test_cli_bulk_and_benchmark.py  test_compat_matrix.py  test_conformance_report.py  test_core.py  test_decode.py  test_gs1.py  test_modules.py  test_presets.py  test_property.py  test_renderers.py  test_rune.py  test_validation.py
tests/compat/: fixtures.json
