[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aztec-py"
version = "1.1.0"
description = "GS1 2027-compliant pure-Python Aztec Code generator. FLG(0) Reader Initialisation, batch encoding, SVG/PDF/PNG, CLI, boarding passes, GS1 labels. ISO 24778."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "greyllmmoder" },
]
keywords = [
  "aztec", "aztec-code", "barcode", "2d-barcode", "qr-code",
  "iso-24778", "barcode-generator", "aztec-rune", "svg-barcode",
  "gs1", "gs1-2027", "gs1-compliant", "gs1-aztec",
  "boarding-pass", "label-printing", "batch-barcode",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
image = [
  "pillow>=8.0",
]
svg = [
  "lxml>=4.9",
]
pdf = [
  "fpdf2>=2.7",
  "pillow>=8.0",
]
decode = [
  "zxing>=1.0.4",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "hypothesis>=6.0",
  "mypy>=1.0",
  "ruff>=0.5",
  "pillow>=8.0",
  "fpdf2>=2.7",
]

[project.urls]
Homepage = "https://github.com/greyllmmoder/python-aztec"
"Bug Tracker" = "https://github.com/greyllmmoder/python-aztec/issues"
Source = "https://github.com/greyllmmoder/python-aztec"
Upstream = "https://github.com/dlenski/aztec_code_generator"

[project.scripts]
aztec = "aztec_py.__main__:cli_main"

[tool.setuptools]
py-modules = ["aztec_code_generator"]

[tool.setuptools.packages.find]
include = ["aztec_py*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=aztec_py --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["aztec_py"]
branch = true

[tool.mypy]
python_version = "3.9"
strict = true
files = ["aztec_py"]

[[tool.mypy.overrides]]
module = ["aztec_py.core"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["aztec_py.__main__"]
disallow_untyped_calls = false

[tool.ruff]
target-version = "py39"
line-length = 100
